--- a/airline/src/css/style.css
+++ b/airline/src/css/style.css
@@ -1,6 +1,5 @@
-
-/*** Spinner Start ***/
-/*** Spinner ***/
+/* Spinner Start */
+/* Spinner */
 .homepage-container {
     background-color: white !important;
     min-height: 100vh;
@@ -20,7 +19,7 @@
     visibility: visible;
     opacity: 1;
 }
-/*** Spinner End ***/
+/* Spinner End */
 
 .back-to-top {
     position: fixed;
@@ -34,8 +33,8 @@
     transition: 0.5s;
     z-index: 99;
 }
-/*** Button Start ***/
-/*** Button Start ***/
+/* Button Start */
+/* Button Start */
 .btn {
     font-weight: 600;
     transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for background and text color */
@@ -52,13 +51,13 @@
     background-color: #161616; /* Light black shade on hover */
     color: #f0f0f0; /* Light text color for contrast */
 }
-/*** Button End ***/
+/* Button End */
 
 
-/*** Button End ***/
+/* Button End */
 
 
-/*** Section Title Start ***/
+/* Section Title Start */
 
 .section-title {
     position: relative;
@@ -222,7 +221,7 @@ body {
     }
 }
 
-/*** Carousel Hero Header Start ***/
+/* Carousel Hero Header Start */
 .hero-header {
     position: relative;
     height: 100vh;
@@ -298,8 +297,8 @@ body {
   }
   
 
-/*** Carousel Hero Header End ***/
-/*** Hero Video Header Start ***/
+/* Carousel Hero Header End */
+/* Hero Video Header Start */
 .hero-video-container {
     position: relative;
     width: 100%;
@@ -342,9 +341,9 @@ body {
 
    
 }
-/*** Hero Video Header End ***/
+/* Hero Video Header End */
 
-/*** Single Page Hero Header Start ***/
+/* Single Page Hero Header Start */
 .bg-breadcrumb {
     background: linear-gradient(rgba(19, 53, 123, 0.5), rgba(19, 53, 123, 0.5)), url(../img/breadcrumb-bg.jpg);
     background-position: center center;
@@ -357,10 +356,10 @@ body {
 .bg-breadcrumb .breadcrumb-item a {
     color: var(--bs-secondary) !important;
 }
-/*** Single Page Hero Header End ***/
+/* Single Page Hero Header End */
 
 
-/*** About Start ***/
+/* About Start */
 .about .container .section-about-title {
     position: relative;
     display: inline-block;
@@ -378,10 +377,10 @@ body {
     margin-right: -50px;
     border: 1px solid var(--bs-primary) !important;
 }
-/*** About End ***/
+/* About End */
 
 
-/*** Services Start ***/
+/* Services Start */
 .service .service-content-inner {
     transition: 0.5s;
 }
@@ -401,10 +400,10 @@ body {
 .service .service-content-inner:hover .service-icon i {
     color: var(--bs-white) !important;
 }
-/*** Service End ***/
+/* Service End */
 
 
-/*** Destination Start ***/
+/* Destination Start */
 .destination .tab-class .tab-content .tab-pane .destination-img {
     position: relative;
     overflow: hidden;
@@ -472,10 +471,10 @@ body {
     filter: grayscale(50%); /* Added to apply a grey effect */
 }
 
-/*** Destination End ***/
+/* Destination End */
 
 
-/*** Packages Start ***/
+/* Packages Start */
 .packages
 {
     background-color: white;
@@ -595,10 +594,10 @@ body {
 .packages .packages-carousel .owl-nav .owl-next:hover i {
     color: var(--bs-white);
 }
-/*** Packages End ***/
+/* Packages End */
 
 
-/*** Explore Tour Start ***/
+/* Explore Tour Start */
 .ExploreTour .tab-class .nav-item {
     padding: 0 0 20px 0;
 }
@@ -767,10 +766,10 @@ body {
     width: 40px;
     background: var(--bs-primary);
 }
-/*** Explore Tour End ***/
+/* Explore Tour End */
 
 
-/*** Gallery Start ***/
+/* Gallery Start */
 .gallery .gallery-item {
     position: relative;
     overflow: hidden;
@@ -842,9 +841,9 @@ body {
     color: var(--bs-white) !important;
 }
 
-/*** Gallery End ***/
+/* Gallery End */
 
-/*** Tour Booking Start ***/
+/* Tour Booking Start */
 .booking {
     background: linear-gradient(rgba(19, 53, 123, .8), rgba(19, 53, 123, .8)), url(../img/tour-booking-bg.jpg);
     background-position: center center;
@@ -884,9 +883,9 @@ body {
 
 
 
-/*** Tour Booking end ***/
+/* Tour Booking end */
 
-/*** Travel Guide Start ***/
+/* Travel Guide Start */
 .guide .guide-item .guide-img {
     position: relative;
 }
@@ -973,10 +972,10 @@ body {
 .guide .guide-item:hover .guide-title .guide-title-inner h4 {
     color: var(--bs-white);
 }
-/*** Travel Guide End ***/
+/* Travel Guide End */
 
 
-/*** Blog Start ***/
+/* Blog Start */
 .blog .blog-item .blog-img {
     position: relative;
 }
@@ -1041,9 +1040,9 @@ body {
 .blog .blog-item .blog-img:hover .blog-img-inner img {
     transform: scale(1.2);
 }
-/*** Blog End ***/
+/* Blog End */
 
-/*** Testimonial Start ***/
+/* Testimonial Start */
 .testimonial .testimonial-carousel {
     position: relative;
 }
@@ -1131,9 +1130,9 @@ body {
     border-style: dotted;
     transition: 0.5s;
 }
-/*** Testimonial End ***/
+/* Testimonial End */
 
-/*** Contact Start ***/
+/* Contact Start */
 .contact .container form .btn.btn-primary {
     box-shadow: inset 0 0 0 0 var(--bs-primary);
 }
@@ -1142,9 +1141,9 @@ body {
     box-shadow: inset 1000px 0 0 0 var(--bs-light) !important;
     color: var(--bs-primary) !important;
 }
-/*** Contact End ***/
+/* Contact End */
 
-/*** Subscribe Start ***/
+/* Subscribe Start */
 .subscribe {
     background: linear-gradient(rgba(19, 53, 123, .6), rgba(19, 53, 123, .6)), url(../img/subscribe-img.jpg);
     background-attachment: fixed;
@@ -1181,7 +1180,7 @@ body {
     margin-left: -50px;
     border: 1px solid var(--bs-white) !important;
 }
-/*** Subscribe End ***/
+/* Subscribe End */
 
 .footer {
     background-color: #1d2022; /* Dark background color */
@@ -1290,7 +1289,7 @@ body {
 
 
 
-/*** copyright Start ***/
+/* copyright Start */
 .copyright {
     border-top: 1px solid rgba(255, 255, 255, 0.08);
     background: var(--bs-dark) !important;
@@ -1299,7 +1298,7 @@ body {
     justify-content: center;
     align-items: center;
 }
-/*** copyright end ***/
+/* copyright end */
 html, body {
     margin: 0;
     padding: 0;
@@ -1310,9 +1309,9 @@ html, body {
     box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
-/*** copyright end ***/
+/* copyright end */
 
-/*** wingpoint start ***/
+/* wingpoint start */
 .wing-points {
     padding: 50px;
     background: linear-gradient(to right, rgba(0, 0, 0, 0.9) 50%, rgba(0, 0, 0, 0.5) 100%), 
@@ -1379,9 +1378,9 @@ html, body {
     color: #f0f0f0; /* Darker shade on hover */
 }
 
-/*** wingpoint end ***/
+/* wingpoint end */
 
-/*** Flight Options Start ***/
+/* Flight Options Start */
 .flight-options {
     padding: 30px;
     border-radius: 12px;
@@ -1398,9 +1397,9 @@ html, body {
     font-weight: 600;
 }
 
-/*** wingpoint end ***/
+/* wingpoint end */
 
-/*** WhyInfinityWings start ***/
+/* WhyInfinityWings start */
 .why-infinity-wings-container {
     padding: 60px 30px;
     text-align: center;
@@ -1496,7 +1495,7 @@ html, body {
 }
 
 
-/** FLight Option Start**/
+/* FLight Option Start*/
 .options-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -1558,105 +1557,8 @@ html, body {
     color: #666666;
 }
 
-/*** Flight Options End ***/
-
-
-/*** Blogcategories start ***/
-
-  /* Container for the blog content */
-/* Container for the main content */
-/* Main container styling */
-.container {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    /* Light background color similar to the screenshot */
-  }
-  
-  /* Sidebar styling */
-  .sidebar {
-    width: 25%;
-    margin-right: 20px;
-    background-color: #ffffff;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for the sidebar */
-    border-radius: 8px;
-  }
-  
-  .sidebar .search-bar input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 1rem;
-  }
-  
-  .sidebar .categories h3 {
-    margin-bottom: 15px;
-    font-size: 1.2rem;
-    color: #333;
-  }
-  
-  .sidebar .categories ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .sidebar .categories ul li {
-    cursor: pointer;
-    padding: 10px 0;
-    border-bottom: 1px solid #ddd;
-    color: #555;
-    transition: color 0.3s ease;
-  }
-  
-  .sidebar .categories ul li:hover {
-    color: #007bff; /* Blue hover effect */
-  }
-  
-  /* Blog content styling */
-  .blog-content {
-    width: 70%;
-  }
-  
-  .blog-content h2 {
-    font-size: 1.5rem;
-    margin-bottom: 20px;
-    color: #333;
-  }
-  
-  .blog-post {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 30px;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  .blog-post img {
-    width: 50%;
-    height: auto;
-    display: block;
-    margin-bottom: 1rem;
-    border-radius: 8px;
-    object-fit: cover;
-    max-height: 200px; /* Ensures all images have the same height */
-  }
-  
-  .blog-post p {
-    margin: 0;
-    font-size: 1rem;
-    color: #666;
-  }
-  
-  
-  
-  
-    
-/*** BlogCategories end ***/
-
-/*** Select Flight Start ***/
+/* Flight Options End */
+/* Select Flight Start */
 .select-flight {
     padding: 20px;
     font-family: Arial, sans-serif;
@@ -1723,7 +1625,7 @@ h1 {
     background-color: #858282;
 }
 
-/*** Select Flight Start ***/
+/* Select Flight Start */
 .date-carousel {
     display: flex;
     overflow-x: auto;
@@ -1752,7 +1654,7 @@ h1 {
     margin: 5px 0;
 }
 
-/***benefits***/
+/**benefits**/
 .benefits-container {
     width: 100%;
     padding: 20px;
@@ -1910,7 +1812,7 @@ button {
 button:hover {
     background-color: #1a1b1c;
 }
-/*** asterik required***/
+/* asterik required***/
 .req{
     color: red;
     font-size: 25px;
@@ -1927,7 +1829,6 @@ button:hover {
     background-color: #f8d7da;
     border-color: #f5c6cb;
 }
-
 .error {
     color: red;
     font-size: 0.875em;
@@ -1937,5 +1838,3 @@ button:hover {
     color: green;
     margin-top: 20px; /* Adjust the margin as needed */
   }
-  
-
